# geodesical_skew_divergence

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
gs_divergence/: __init__.py  alpha_geodesic.py  geodesical_skew_divergence.py  quasi_arithmetic_mean.py  symmetrized_geodesical_skew_divergence.py
tests/: test_alpha_geodesic.py  test_gs_div.py
