[metadata]
name = gs_divergence
version = file: VERSION
url = https://github.com/nocotan/geodesical_skew_divergence
author = Masanari Kimura
author_email = mkimura@klis.tsukuba.ac.jp
license_file = LICENSE
description = PyTorch implementation of α-geodesical skew divergence
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    torch
